# skribbl_clone

backend/src/: CMakeLists.txt  connection.cpp  main.cpp  query.cpp  room.cpp  router.cpp  server.cpp  session.cpp
backend/src/include/: connection.hpp  room.hpp  router.hpp  server.hpp  session.hpp
backend/src/include/utils/: json.hpp  query.hpp  responses.hpp  words.cpp
backend/src/utils/: json.cpp  responses.cpp
scribble_front/: index.html  package-lock.json  package.json
scribble_front/src/: App.jsx  index.css
scribble_front/src/components/: charBox.css  charBox.jsx  game_canvas.css  game_canvas.jsx  leaderBoard.css  leaderBoard.jsx  navbar.css  navbar.jsx
scribble_front/src/pages/: gameRoom.css  gameRoom.jsx  home.css  home.jsx
